project('Kkrieger', 'cpp', license : 'BSD-2-Clause', meson_version : '>=0.56', version : '0.1.0')

add_project_arguments('-Wno-unknown-pragmas', language : 'cpp')
add_project_arguments('-Wno-attributes', language : 'cpp')
add_project_arguments('-D_DEBUG', language : 'cpp')
add_project_arguments('-mmmx', language : 'cpp')
add_project_arguments('-msse', language : 'cpp')

subdir('base_console')
